fix: only show prices to logged in customers

--- a/sections/bulk-quick-order-list.liquid
+++ b/sections/bulk-quick-order-list.liquid
@@ -2,7 +2,9 @@
 
 <script src="{{ 'quick-order-list.js' | asset_url }}" defer="defer"></script>
 
-{% render 'quick-order-list', product: product, show_image: true, show_sku: true, is_modal: true %}
+{% if customer %}
+  {% render 'quick-order-list', product: product, show_image: true, show_sku: true, is_modal: true %}
+{% endif %}
 
 {% schema %}
 {
