fix: remove symbol

--- a/snippets/quick-order-list-row.liquid
+++ b/snippets/quick-order-list-row.liquid
@@ -257,7 +257,7 @@
                         >
                         {%- assign discount_amount = variant.price | minus: price_break.price -%}
                         {%- assign discount_percentage = discount_amount | times: 100.0 | divided_by: variant.price | round -%}
-                        <span style="color: red;">≥ {{ discount_percentage }}%</span>
+                        <span style="color: red;">{{ discount_percentage }}%</span>
                         {%- assign price = price_break.price | money_with_currency -%}
                         <span> {{ 'sections.quick_order_list.each' | t: money: price }}</span>
                       </li>
