--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -430,8 +430,9 @@
                                 {%- if item.variant.quantity_price_breaks.size > 0 -%}
                                   {%- assign base_price_decimal = item.variant.metafields.custom.base_variant_price.value | default: '' -%}
                                   {%- if base_price_decimal != '' -%}
-                                    <div class="volume-pricing-uvp caption">
-                                      UVP {{ item.variant.metafields.custom.base_variant_price.value | money }}
+                                    {%- assign base_price_cents_for_display = base_price_decimal | times: 100 | round -%}
+                                    <div class="volume-pricing-uvp caption" style="padding: .6rem .8rem;">
+                                      UVP {{ base_price_cents_for_display | money }}
                                     </div>
                                   {%- endif -%}
                                   <volume-pricing class="parent-display">
