--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -431,7 +431,7 @@
                                   {%- assign base_price_decimal = item.variant.metafields.custom.base_variant_price.value | default: '' -%}
                                   {%- if base_price_decimal != '' -%}
                                     {%- assign base_price_cents_for_display = base_price_decimal | times: 100 | round -%}
-                                    <div class="volume-pricing-uvp caption" style="padding: .6rem .8rem;">
+                                    <div class="volume-pricing-uvp caption" style="display: block; margin-left: 1.2rem; margin-top: 1.2rem; font-size: 1.2rem;">
                                       UVP {{ base_price_cents_for_display | money }}
                                     </div>
                                   {%- endif -%}
