fix: pricing table

--- a/snippets/quick-order-list.liquid
+++ b/snippets/quick-order-list.liquid
@@ -66,6 +66,12 @@
                   class="quick-order-list__table-heading--wide small-hide medium-hide caption-with-letter-spacing"
                   scope="col"
                 >
+                  {{ 'sections.cart.headings.price' | t }}
+                </th>
+                <th
+                  class="quick-order-list__table-heading--wide small-hide medium-hide caption-with-letter-spacing"
+                  scope="col"
+                >
                   UVP
                 </th>
                 <th class="small-hide medium-hide right caption-with-letter-spacing" scope="col">
