--- a/snippets/quick-order-list-row.liquid
+++ b/snippets/quick-order-list-row.liquid
@@ -240,13 +240,6 @@
                   {%- assign base_price_cents = variant.price -%}
                 {%- endif -%}
 
-                {%- if base_price_decimal != '' -%}
-                  {%- assign base_price_cents_for_display = base_price_decimal | times: 100 | round -%}
-                  <div class="volume-pricing-uvp caption" style="display: block; margin-left: 1.2rem; margin-top: 1.2rem; font-size: 1.2rem;">
-                    UVP {{ base_price_cents_for_display | money }}
-                  </div>
-                {%- endif -%}
-
                 <volume-pricing class="parent-display">
                   <ul class="list-unstyled">
                     {%- comment -%} 1+ row (current variant price) {%- endcomment -%}
@@ -339,6 +332,12 @@
         </span>
       </div>
     </quantity-popover>
+  </td>
+  <td class="variant-item__b2b-price small-hide medium-hide">
+    {%- assign item_price = item.price | money -%}
+    <span class="price">
+      {{- 'sections.quick_order_list.each' | t: money: item_price -}}
+    </span>
   </td>
   {%- assign item_price = item.price | money -%}
   <td class="variant-item__price small-hide medium-hide">
@@ -459,6 +458,7 @@
       <span class="svg-wrapper">{{ 'icon-error.svg' | inline_asset_content }}</span>
     </div>
   </td>
+  <td></td>
   <td></td>
   <td></td>
   <td></td>
