--- a/snippets/quick-order-list.liquid
+++ b/snippets/quick-order-list.liquid
@@ -57,8 +57,9 @@
                   {{ 'products.product.quantity.label' | t }}
                 </th>
                 <th
-                  class="quick-order-list__table-heading--wide small-hide medium-hide caption-with-letter-spacing"
+                  class="quick-order-list__table-heading--wide small-hide medium-hide caption-with-letter-spacing right"
                   scope="col"
+                  style="white-space: nowrap;"
                 >
                   B2B-Preis
                 </th>
