--- a/snippets/quick-order-list.liquid
+++ b/snippets/quick-order-list.liquid
@@ -61,13 +61,13 @@
                   scope="col"
                   style="white-space: nowrap;"
                 >
-                  B2B-Preis
+                  UVP
                 </th>
                 <th
                   class="quick-order-list__table-heading--wide small-hide medium-hide caption-with-letter-spacing"
                   scope="col"
                 >
-                  {{ 'sections.cart.headings.price' | t }}
+                  B2B-Preis
                 </th>
                 <th class="small-hide medium-hide right caption-with-letter-spacing" scope="col">
                   {%- if product.has_only_default_variant -%}
